Switch color scheme to medical teal

--- a/homecarehub-src/training.html
+++ b/homecarehub-src/training.html
@@ -694,13 +694,13 @@
                                             />
                                         </div>
                                     ) : (
-                                        <div className="p-6 bg-blue-50 border border-blue-200 rounded-lg">
-                                            <p className="text-blue-900 font-semibold mb-3">External Resource</p>
+                                        <div className="p-6 bg-teal-50 border border-teal-200 rounded-lg">
+                                            <p className="text-teal-800 font-semibold mb-3">External Resource</p>
                                             <a
                                                 href={selectedTraining.resourceUrl}
                                                 target="_blank"
                                                 rel="noopener noreferrer"
-                                                className="text-blue-600 hover:text-blue-800 underline flex items-center gap-2"
+                                                className="text-teal-600 hover:text-teal-700 underline flex items-center gap-2"
                                             >
                                                 Open Training Resource
                                                 <ExternalLink className="w-4 h-4" />
