feat: Add Firebase API endpoints and client helper for employee data sync
- Created /api/employees.js: Vercel serverless function for employee CRUD operations
  - GET /api/employees: Fetch all employees from Firestore
  - POST /api/employees: Create new employee (signup)
  - GET /api/employees?id=X: Get specific employee
  - PUT /api/employees?id=X: Update employee
- Created homecarehub-src/firebase-client.js: Browser-side API client
- Updated index.html to load firebase-client.js
- Next: Replace app.js local storage calls with API calls

This fixes the issue where employee signups weren't syncing across devices.
Employees will now be stored in Firestore instead of device-local storage.

--- a/homecarehub-src/index.html
+++ b/homecarehub-src/index.html
@@ -23,6 +23,8 @@
     <script src="training-content.js"></script>
     <script src="training-generator.js"></script>
     <script src="quiz-generator.js"></script>
+    <!-- Load Firebase API client helper -->
+    <script src="firebase-client.js"></script>
     <!-- Load the application JavaScript -->
     <script type="text/babel" src="app.js?v=17.0"></script>
 </body>
